Changed Image Links
Images are now viewable.

--- a/discord.html
+++ b/discord.html
@@ -100,7 +100,7 @@
     </style>
     <head>
         <link rel="stylesheet" href="headerstyle.css"><!--HEADER START-->
-        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="file:///C:/Users/lenovo/Downloads/soulfirelogo%20(2).png" alt="soul fire logo"></a>
+        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="https://drive.google.com/file/d/1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD/view?usp=sharing" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a href="Homepage.html">Home</a>
@@ -109,7 +109,7 @@
         </div></div><!--HEADER END-->
     </head>
     <main>
-        <img id="dislogo" src="file:///C:/Users/lenovo/Downloads/Discord-Logo+Wordmark-Black.png" alt="Discord Logo">
+        <img id="dislogo" src="https://drive.google.com/file/d/18uvEHwv-qhmLYMRfH4FEMNyZuVx9LmqM/view?usp=sharing" alt="Discord Logo">
         <h1 id="discord">Join us on Discord! You can chat with our community and receive updates that you wouldn't receive anywhere else!</h1>
         <div class="center">
             <form id="disinvbut" action="https://discord.gg/Z9Tw8WJJCf" target="_blank">
