--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <!--HEADER START-->
     <head>
         <link rel="stylesheet" href="headerstyle.css">
-        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="file:///C:/Users/lenovo/Downloads/soulfirelogo%20(2).png" alt="soul fire logo"></a>
+        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="https://drive.google.com/file/d/1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD/view?usp=sharing" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a class="active" href="index.html">Home</a>
@@ -236,9 +236,9 @@
         <div id="ytcycle" class="grey"> <!--YouTube marketing-->
             <table style="margin-left: auto; margin-right: auto;" id="table">
                 <tr>
-                    <th><img id="img1" class="ytcycleimg" src="file:///C:/Users/lenovo/Downloads/thumbsup.png"></th>
-                    <th><img id="img2" class="ytcycleimg" src="file:///C:/Users/lenovo/Downloads/inf.png"></th>
-                    <th><img id="img3" class="ytcycleimg" src="file:///C:/Users/lenovo/Downloads/sub%20(2).png"></th>
+                    <th><img id="img1" class="ytcycleimg" src="https://drive.google.com/file/d/1iLYFSJlEzXrWl_gITjLRq3wcDB2gFGQS/view?usp=sharing"></th>
+                    <th><img id="img2" class="ytcycleimg" src="https://drive.google.com/file/d/1ZdbmymV3aU1b6KnceF6ssE16Fbg9iaBZ/view?usp=sharing"></th>
+                    <th><img id="img3" class="ytcycleimg" src="https://drive.google.com/file/d/1K35ZBRjvq0p9qDJYeaVjbg5q7flfvnEv/view?usp=sharing"></th>
                 </tr>
                 <tr>
                     <td class="table">LIKE</td>
