--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <!--HEADER START-->
     <head>
         <link rel="stylesheet" href="headerstyle.css">
-        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="https://drive.google.com/file/d/1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD/view?usp=sharing" alt="soul fire logo"></a>
+        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="https://drive.google.com/file/d/1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD/preview" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a class="active" href="index.html">Home</a>
@@ -230,15 +230,15 @@
         <div class="one2"> <!--Welcome Message-->
             <h1 id="welcome">Welcome Message</h1>
             <h2 class="welc">Welcome to Soul Fire!</h2>
-            <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" href="https://gofund.me/42829f10">here.</a></p>
+            <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
         </div>
         <hr>
         <div id="ytcycle" class="grey"> <!--YouTube marketing-->
             <table style="margin-left: auto; margin-right: auto;" id="table">
                 <tr>
-                    <th><img id="img1" class="ytcycleimg" src="https://drive.google.com/file/d/1iLYFSJlEzXrWl_gITjLRq3wcDB2gFGQS/view?usp=sharing"></th>
-                    <th><img id="img2" class="ytcycleimg" src="https://drive.google.com/file/d/1ZdbmymV3aU1b6KnceF6ssE16Fbg9iaBZ/view?usp=sharing"></th>
-                    <th><img id="img3" class="ytcycleimg" src="https://drive.google.com/file/d/1K35ZBRjvq0p9qDJYeaVjbg5q7flfvnEv/view?usp=sharing"></th>
+                    <th><img id="img1" class="ytcycleimg" src="https://drive.google.com/file/d/1iLYFSJlEzXrWl_gITjLRq3wcDB2gFGQS/preview"></th>
+                    <th><img id="img2" class="ytcycleimg" src="https://drive.google.com/file/d/1ZdbmymV3aU1b6KnceF6ssE16Fbg9iaBZ/preview"></th>
+                    <th><img id="img3" class="ytcycleimg" src="https://drive.google.com/file/d/1K35ZBRjvq0p9qDJYeaVjbg5q7flfvnEv/preview"></th>
                 </tr>
                 <tr>
                     <td class="table">LIKE</td>
