--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <!--HEADER START-->
     <head>
         <link rel="stylesheet" href="headerstyle.css">
-        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
+        <a class="logo" href="index.html" id="logoa"><img id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a class="active" href="index.html">Home</a>
