--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
             #fundme:hover {
                 color: #1da4ed;
             }
+            @media (max-width: 1605px) {
+                .cyclemedia {
+                    display: none;
+                }
+            }
         </style>
         <!--HEADER START-->
     <head>
@@ -232,6 +237,7 @@
             <h2 class="welc">Welcome to Soul Fire!</h2>
             <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
         </div>
+        <div id="cyclemedia">
         <hr>
         <div id="ytcycle" class="grey"> <!--YouTube marketing-->
             <table style="margin-left: auto; margin-right: auto;" id="table">
@@ -256,6 +262,7 @@
                     <button id="visitus">Visit us</button>
                 </form>
             </div>
+        </div>
         </div>
         <hr><!--Founders-->
         <div class="white">
