--- a/discord.html
+++ b/discord.html
@@ -100,10 +100,10 @@
     </style>
     <head>
         <link rel="stylesheet" href="headerstyle.css"><!--HEADER START-->
-        <a class="logo" href=#home id="logoa"><img id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
+        <a class="logo" href="index.html" id="logoa"><img id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
-            <a href="Homepage.html">Home</a>
+            <a href="index.html">Home</a>
             <a class="active" href="discord.html">Discord</a>
             <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
         </div></div><!--HEADER END-->
