prep for new page

--- a/discord.html
+++ b/discord.html
@@ -105,6 +105,7 @@
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a href="index.html">Home</a>
             <a class="active" href="discord.html">Discord</a>
+            <a href="social.html">Social</a>
             <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
         </div></div><!--HEADER END-->
     </head>
@@ -124,7 +125,7 @@
             <form action="https://discord.com/guidelines" target="_blank">
                 <button id="guidebut">Discord Guidelines</button>
             </form>
-            <form action="https://discord.com/guidelines" target="_blank">
+            <form action="https://tinyurl.com/SFDiscordPolicy" target="_blank">
                 <button id="polbut">Discord Policy</button>
             </form>
         </div>  
