--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a class="active" href="index.html">Home</a>
             <a href="discord.html">Discord</a>
+            <a href="social.html">Social</a>
             <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
         </div></div>
     </head>
