--- a/header.html
+++ b/header.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
     <head><!--HEADER START-->
         <link rel="stylesheet" href="headerstyle.css">
-        <a class="logo" href="index.html" id="logoa"><img id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
+        <a class="logo" href="index.html" id="logoa"><img class="hideone" id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a class="active" href="index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn">About<div class="arrow-down"></div></button>
+                <div class="dropdown-content">
+                  <a href="#">Branding</a>
+                  <a href="#">Documents</a>
+                  <a href="#">Reports</a>
+                </div>
+            </div>
             <a href="discord.html">Discord</a>
             <a href="social.html">Social</a>
             <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
         </div></div>
+        <p id="limited">We have detected that you have a small screen. Some features may not be available. Please tilt your device into landscape mode or upgrade to a bigger screen.</p>
     </head><!--HEADER END-->
 </html>
