--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <h2 class="welc">Welcome to Soul Fire!</h2>
             <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
         </div>
-        <div id="cyclemedia">
+        <div class="cyclemedia">
         <hr>
         <div id="ytcycle" class="grey"> <!--YouTube marketing-->
             <table style="margin-left: auto; margin-right: auto;" id="table">
