--- a/discord.html
+++ b/discord.html
@@ -99,12 +99,12 @@
         }
     </style>
         <head><!--HEADER START-->
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="viewport" content="width=device-width, initial-scale=0.5">
             <link rel="stylesheet" href="headerstyle.css">
             <a class="logo" href="index.html" id="logoa"><img class="hideone" id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
             <div>
             <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
-                <a class="active" href="index.html">Home</a>
+                <a href="index.html">Home</a>
                 <div class="dropdown">
                     <button class="dropbtn">About<div class="arrow-down"></div></button>
                     <div class="dropdown-content">
@@ -113,7 +113,7 @@
                       <a href="#">Reports</a>
                     </div>
                 </div>
-                <a href="discord.html">Discord</a>
+                <a class="active" href="discord.html">Discord</a>
                 <a href="social.html">Social</a>
                 <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
             </div></div>
