--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
                     display: none;
                 }
             }
+            @media(max-width: 750px){
+                .welc-mes {
+                    margin-left: 5px;
+                    margin-right: 5px;
+                }
+            }
         </style>
         <head><!--HEADER START-->
             <meta name="viewport" content="width=device-width, initial-scale=0.5">
