--- a/index.html
+++ b/index.html
@@ -204,9 +204,17 @@
             .cyclemedia {
                 display: block;
             }
+            #donate {
+                display: none;
+                font-family: 'Barlow', sans-serif;
+                text-align: center;
+            }
             @media (max-width: 1605px) {
                 .cyclemedia {
                     display: none;
+                }
+                #donate {
+                    display: block;
                 }
             }
             @media(max-width: 750px){
@@ -250,10 +258,15 @@
         </div>
     </main>
     <body>
+        <div id="donate">
+            <h2>Donate <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></h2>
+        </div>
+        <div class="cyclemedia">
         <div class="one2"> <!--Welcome Message-->
             <h1 id="welcome">Welcome Message</h1>
             <h2 class="welc">Welcome to Soul Fire!</h2>
             <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
+        </div>
         </div>
         <div class="cyclemedia">
         <hr>
@@ -282,6 +295,7 @@
             </div>
         </div>
         </div>
+        <div class="cyclemedia">
         <hr><!--Founders-->
         <div class="white">
             <div id="founders"></div>
@@ -294,6 +308,7 @@
                 <h2 class="size">Tashi Van Ommen</h2>
                 <p class="size_two">Tashi was the second member to join Soul Fire. He does vocals and sometimes edits our videos too!</p>
             </div>
+        </div>
         </div>
     </body>
     <footer><!--FOOTER START-->
