--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <button class="dropbtn">About<div class="arrow-down"></div></button>
                     <div class="dropdown-content">
                       <a href="#">Branding</a>
-                      <a href="#">Documents</a>
+                      <a href="documents.html">Documents</a>
                       <a href="#">Reports</a>
                     </div>
                 </div>
