--- a/documents.html
+++ b/documents.html
@@ -51,8 +51,8 @@
         <a class="logo" href="index.html" id="logoa"><img class="hideone" id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
-            <a class="active" href="index.html">Home</a>
-            <div class="dropdown">
+            <a href="index.html">Home</a>
+            <div class="dropdown active">
                 <button class="dropbtn">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
                   <a href="#">Branding</a>
@@ -81,7 +81,7 @@
                 <td><a href="https://tinyurl.com/SFDiscordPolicy" target="_blank">Download</a></td>
             </tr>
         </table>
-        <h2 id="docs">Minutes & Reports</h2>
+        <h2 id="docs">Meeting Minutes</h2>
         <table id="table">
             <tr>
                 <th id="name">Name</th>
