--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
         <style>
+            html, body {
+                overflow-x: hidden;
+            }
+            body {
+                position: relative
+            }
             .bluebox {
                 width: auto;
                 height: fit-content;
