--- a/social.html
+++ b/social.html
@@ -7,6 +7,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
     <style>
+        html, body {
+                overflow-x: hidden;
+            }
         #intro {
             background-color: #1da4ed;
             width: auto;
