--- a/social.html
+++ b/social.html
@@ -39,6 +39,12 @@
             margin-bottom: auto;
             margin-top: auto;
             vertical-align: middle;
+            display: inline-block;
+        }
+        @media(max-width: 1000px){
+            .socialimg {
+                display: none;
+            }
         }
         #iggrey {
             display:inline-block;
