--- a/social.html
+++ b/social.html
@@ -39,7 +39,6 @@
             margin-bottom: auto;
             margin-top: auto;
             vertical-align: middle;
-            display: inline-block;
         }
         @media(max-width: 1000px){
             .socialimg {
@@ -118,6 +117,22 @@
         #centre {
             width: 1000px;
             margin: 0 auto;
+        }
+        @media(max-width: 850px) {
+            #username {
+                display: none;
+            }
+            #usernametw {
+                display: none;
+            }
+            #usernamefb {
+                display: none;
+            }
+        }
+        @media(max-width: 600px){
+            #igtext {
+                display: none;
+            }
         }
     </style>
         <head><!--HEADER START-->
