--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div></div>
         <div class="greybox">
             <h1 id="introduction" class="hundred">We are Soul Fire. We are a community that strive to worship God. We aim to scatter the gospel throughout the world, for whoever believes in God shall be welcomed into the kingdom of heaven.​</h1>
-            <form class="contactus" action="mailto:tossinworship@gmail.com">
+            <form class="contactus" action="mailto:tossinworship@gmail.com" target="_blank">
                 <button type="submit" class="contactus">contact us</button>
             </form>
         </div>
@@ -296,7 +296,7 @@
                 </tr>
             </table>
             <div>
-                <form tartet="_blank"action="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">
+                <form tartet="_blank"action="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw" target="_blank">
                     <button id="visitus">Visit us</button>
                 </form>
             </div>
