--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
             </div>
             <a href="discord.html">Discord</a>
             <a href="social.html">Social</a>
-            <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
+            <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw" target="_blank">YouTube</a>
         </div></div>
         <p id="limited">We have detected that you have a small screen. Some features may not be available. Please tilt your device into landscape mode or upgrade to a bigger screen.</p>
     </head><!--HEADER END-->
