--- a/documents.html
+++ b/documents.html
@@ -57,7 +57,7 @@
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a href="index.html">Home</a>
             <div class="dropdown active">
-                <button class="dropbtn">About<div class="arrow-down"></div></button>
+                <button class="dropbtn active">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
                   <a href="#">Branding</a>
                   <a href="documents.html">Documents</a>
@@ -66,7 +66,7 @@
             </div>
             <a href="discord.html">Discord</a>
             <a href="social.html">Social</a>
-            <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw">YouTube</a>
+            <a href="https://www.youtube.com/channel/UCzyiucbnSZ4V0zVUmdmxunw" target="_blank">YouTube</a>
         </div></div>
         <p id="limited">We have detected that you have a small screen. Some features may not be available. Please tilt your device into landscape mode or upgrade to a bigger screen.</p>
     </head><!--HEADER END-->
