--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="dropdown-content">
                       <a href="#">Branding</a>
                       <a href="documents.html">Documents</a>
-                      <a href="#">Reports</a>
+                      <a href="reports.html">Reports</a>
                     </div>
                 </div>
                 <a href="discord.html">Discord</a>
