--- a/discord.html
+++ b/discord.html
@@ -114,7 +114,7 @@
                     <div class="dropdown-content">
                       <a href="#">Branding</a>
                       <a href="documents.html">Documents</a>
-                      <a href="#">Reports</a>
+                      <a href="reports.html">Reports</a>
                     </div>
                 </div>
                 <a class="active" href="discord.html">Discord</a>
