--- a/reports.html
+++ b/reports.html
@@ -55,13 +55,13 @@
         <a class="logo" href="index.html" id="logoa"><img class="hideone" id="logo" style="transform: scale(0.8);" src="http://drive.google.com/uc?export=view&id=1-15iPh91IbM4gMcUE8UK4jhnwz3t-IBD" alt="soul fire logo"></a>
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
-            <a class="active" href="index.html">Home</a>
-            <div class="dropdown">
-                <button class="dropbtn">About<div class="arrow-down"></div></button>
+            <a href="index.html">Home</a>
+            <div class="dropdown active">
+                <button class="dropbtn active">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
                   <a href="#">Branding</a>
                   <a href="documents.html">Documents</a>
-                  <a href="#">Reports</a>
+                  <a href="reports.html">Reports</a>
                 </div>
             </div>
             <a href="discord.html">Discord</a>
