--- a/branding.html
+++ b/branding.html
@@ -8,21 +8,25 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
     <style>
-        html, body {
-                overflow-x: hidden;
-            }
-        #intro {
+        #lead {
             background-color: #1da4ed;
-            width: auto;
-            height:fit-content;
             font-family: 'Barlow', sans-serif;
-            border-radius: 15px;
-            font-weight: 300;
-            font-size: 40px;
-            text-align: center;
             color: white;
-            padding-top: 10px;
+            font-weight: 300;
             padding-bottom: 10px;
+            padding-top: 10px;
+            border-radius: 10px;
+            text-align: center;
+        }
+        #policy {
+            background-color: #1da4ed;
+            font-family: 'Barlow', sans-serif;
+            color: white;
+            font-weight: 300;
+            padding-bottom: 10px;
+            padding-top: 10px;
+            border-radius: 10px;
+            text-align: center;
         }
         #table {
             font-family: 'Barlow', sans-serif;
@@ -56,10 +60,10 @@
         <div>
         <div class="topnav"><!--ADD STYLE CLASS "ACTIVE" TO THE ACTIVE PAGE!!!-->
             <a href="index.html">Home</a>
-            <div class="dropdown active">
-                <button class="dropbtn active">About<div class="arrow-down"></div></button>
+            <div class="dropdown">
+                <button class="dropbtn">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
-                  <a href="branding.html">Branding</a>
+                  <a class="active"  href="branding.html">Branding</a>
                   <a href="documents.html">Documents</a>
                   <a href="reports.html">Reports</a>
                 </div>
@@ -71,36 +75,23 @@
         <p id="limited">We have detected that you have a small screen. Some features may not be available. Please tilt your device into landscape mode or upgrade to a bigger screen.</p>
     </head><!--HEADER END-->
     <body>
-        <h1 id="intro">Here are links to all of Soul Fire's public documents.</h1>
-        <h2 id="docs">Policies</h2>
+        <h1 id="lead">Get access to all of Soul Fire's custom brand images!Please adhere to the Branding Policy below.</h1>
+        <h2 id="policy">We’re a brand that strives to honor God in all our ways. That said, we are keen on keeping this appropriate for all audiences. If you’re going to use our resources for something please keep it God honoring and send it to us for approval before you distribute it. Please do not edit, change, distort, recolor, or reconfigure the Soul Fire logo. Please do not edit, change, distort, recolor, or reconfigure the Soul Fire banner. If you have a valid reason to change, recolor, or reconfigure the Soul Fire logo or banner, please consult the Director of Marketing for an official letter of approval.</h2>
         <table id="table">
             <tr>
                 <th id="name">Name</th>
                 <th id="release">Release</th>
                 <th id="download">Download</th>
-            </tr>
-            <tr>
-                <td>Soul Fire Discord Policy</td>
-                <td>2021</td>
-                <td><a href="https://tinyurl.com/SFDiscordPolicy" target="_blank">Download</a></td>
             </tr>
             <tr>
                 <td>Soul Fire Branding Policy</td>
                 <td>2021</td>
                 <td><a href="https://tinyurl.com/SFBrandingPolicy" target="_blank">Download</a></td>
             </tr>
-        </table>
-        <h2 id="docs">Meeting Minutes</h2>
-        <table id="table">
             <tr>
-                <th id="name">Name</th>
-                <th id="release">Release</th>
-                <th id="download">Download</th>
-            </tr>
-            <tr>
-                <td>Q3 2021 Board Meeting Minutes</td>
+                <td>Soul Fire Brand Pack</td>
                 <td>2021</td>
-                <td><a href="https://drive.google.com/file/d/1WdLcHz5UgI5D_8NcZ6SWcs83o03qBosm/view?usp=sharing" target="_blank">Download</a></td>
+                <td><a href="https://tinyurl.com/SFBrandPack" target="_blank">Download</a></td>
             </tr>
         </table>
     </body>
