--- a/social.html
+++ b/social.html
@@ -146,7 +146,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">About<div class="arrow-down"></div></button>
                     <div class="dropdown-content">
-                      <a href="#">Branding</a>
+                      <a href="branding.html">Branding</a>
                       <a href="documents.html">Documents</a>
                       <a href="reports.html">Reports</a>
                     </div>
