--- a/header.html
+++ b/header.html
@@ -16,9 +16,9 @@
             <div class="dropdown">
                 <button class="dropbtn">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
-                  <a href="#">Branding</a>
+                  <a href="branding.html">Branding</a>
                   <a href="documents.html">Documents</a>
-                  <a href="#">Reports</a>
+                  <a href="reports.html">Reports</a>
                 </div>
             </div>
             <a href="discord.html">Discord</a>
