--- a/reports.html
+++ b/reports.html
@@ -59,7 +59,7 @@
             <div class="dropdown active">
                 <button class="dropbtn active">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
-                  <a href="#">Branding</a>
+                  <a href="branding.html">Branding</a>
                   <a href="documents.html">Documents</a>
                   <a href="reports.html">Reports</a>
                 </div>
