--- a/branding.html
+++ b/branding.html
@@ -8,6 +8,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
     <style>
+        html, body {
+                overflow-x: hidden;
+            }
         #lead {
             background-color: #1da4ed;
             font-family: 'Barlow', sans-serif;
@@ -63,7 +66,7 @@
             <div class="dropdown">
                 <button class="dropbtn">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
-                  <a class="active"  href="branding.html">Branding</a>
+                  <a class="active" href="branding.html">Branding</a>
                   <a href="documents.html">Documents</a>
                   <a href="reports.html">Reports</a>
                 </div>
