added footer to about pages

--- a/branding.html
+++ b/branding.html
@@ -98,4 +98,10 @@
             </tr>
         </table>
     </body>
+    <footer><!--FOOTER START-->
+        <link rel="stylesheet" href="footerstyle.css">
+            <div id="footer">
+                <p id="text">&copy;2021 Soul Fire</p>
+            </div>
+        </footer><!--FOOTER END-->
 </html>
