--- a/documents.html
+++ b/documents.html
@@ -60,7 +60,7 @@
                 <button class="dropbtn active">About<div class="arrow-down"></div></button>
                 <div class="dropdown-content">
                   <a href="branding.html">Branding</a>
-                  <a href="documents.html">Documents</a>
+                  <a class="active" href="documents.html">Documents</a>
                   <a href="reports.html">Reports</a>
                 </div>
             </div>
