--- a/reports.html
+++ b/reports.html
@@ -61,7 +61,7 @@
                 <div class="dropdown-content">
                   <a href="branding.html">Branding</a>
                   <a href="documents.html">Documents</a>
-                  <a href="reports.html">Reports</a>
+                  <a class="active" href="reports.html">Reports</a>
                 </div>
             </div>
             <a href="discord.html">Discord</a>
