--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
                 font-family: 'Barlow', sans-serif;
                 text-align: center;
             }
+            .welcomemedia {
+                display: block;
+            }
             @media (max-width: 1605px) {
                 .cyclemedia {
                     display: none;
                 }
-                #donate {
-                    display: block;
-                }
             }
-            @media(max-width: 750px){
+            @media(max-width: 1000px){
                 .welc-mes {
                     margin-left: 5px;
                     margin-right: 5px;
@@ -268,7 +268,7 @@
         <div id="donate">
             <h2>Donate <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></h2>
         </div>
-        <div class="cyclemedia">
+        <div class="welcomemedia">
         <div class="one2"> <!--Welcome Message-->
             <h1 id="welcome">Welcome Message</h1>
             <h2 class="welc">Welcome to Soul Fire!</h2>
