--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="one2"> <!--Welcome Message-->
             <h1 id="welcome">Welcome Message</h1>
             <h2 class="welc">Welcome to Soul Fire!</h2>
-            <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 2 members. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
+            <p class="welc-mes">Soul Fire is a band on YouTube. We aim to worship God through song. We are a small band, currently consisting of only 1 member. We are a non-profit group, but if you would like to support our work you can do so <a id="fundme" target="_blank" href="https://gofund.me/42829f10">here.</a></p>
         </div>
         </div>
         <div class="cyclemedia">
